--- a/citater/package.json
+++ b/citater/package.json
@@ -1,13 +1,15 @@
 {
-  "homepage": "https://kirkemann.github.io/opgave_react_1",
+  "homepage": "https://kirkemann.github.io/citater",
   "name": "citater",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "build": "^0.1.4",
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "run": "^1.4.0"
   },
   "scripts": {
     "predeploy": "npm run build",
